Header af plus wat namen veranderd

--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -50,6 +50,14 @@
   text-decoration: none;
 }
 
+/* #wishlist{
+  display: flex;
+}
+
+#chat{
+  display: flex;
+} */
+
 .dropdown {
   float: left;
   overflow: hidden;
